fixed Dropdown menus overflowing

--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -7,11 +7,11 @@
 }
 
 .container {
-    all: unset;
+    /* all: unset;
     appearance: none;
     -webkit-appearance: none;
-    -moz-appearance: none;
-    padding: 8px 40px 8px 10px;
+    -moz-appearance: none; */
+    padding: 8px;
     cursor: pointer;
     position: relative;
     background-color: var(--palette-100);
@@ -20,8 +20,14 @@
     font-size: 20px;
     color: var(--palette-950);
     font-weight: 300;
+    width: fit-content;
+    max-width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     overflow: hidden;
+    display: block;
 }
+
 
 .dropdownIcon {
     position: absolute;
